--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,30 +58,30 @@
 :root {
   --background: oklch(0.97 0.01 267.41);
   --foreground: oklch(0.22 0 0);
-  --card: oklch(1.00 0 0);
+  --card: oklch(1 0 0);
   --card-foreground: oklch(0.22 0 0);
-  --popover: oklch(1.00 0 0);
+  --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.22 0 0);
-  --primary: oklch(0.80 0.14 348.82);
+  --primary: oklch(0.8 0.14 348.82);
   --primary-foreground: oklch(0 0 0);
-  --secondary: oklch(0.94 0.07 97.70);
+  --secondary: oklch(0.94 0.07 97.7);
   --secondary-foreground: oklch(0 0 0);
   --muted: oklch(0.92 0.01 273.42);
   --muted-foreground: oklch(0.34 0 0);
   --accent: oklch(0.83 0.09 247.96);
   --accent-foreground: oklch(0 0 0);
-  --destructive: oklch(0.70 0.19 23.04);
+  --destructive: oklch(0.7 0.19 23.04);
   --border: oklch(0.85 0 0);
   --input: oklch(0.85 0 0);
   --ring: oklch(0.83 0.09 247.96);
-  --chart-1: oklch(0.80 0.14 348.82);
+  --chart-1: oklch(0.8 0.14 348.82);
   --chart-2: oklch(0.77 0.15 306.21);
   --chart-3: oklch(0.83 0.09 247.96);
   --chart-4: oklch(0.88 0.09 66.79);
   --chart-5: oklch(0.94 0.14 130.35);
-  --sidebar: oklch(1.00 0 0);
+  --sidebar: oklch(1 0 0);
   --sidebar-foreground: oklch(0.22 0 0);
-  --sidebar-primary: oklch(0.80 0.14 348.82);
+  --sidebar-primary: oklch(0.8 0.14 348.82);
   --sidebar-primary-foreground: oklch(0 0 0);
   --sidebar-accent: oklch(0.83 0.09 247.96);
   --sidebar-accent-foreground: oklch(0 0 0);
@@ -93,16 +93,20 @@
   --font-mono: Geist Mono, Geist Mono Fallback, ui-monospace;
 
   --radius: 0rem;
-  
+
   --shadow-2xs: 0px 2px 5px 0px oklch(0.83 0.09 247.96 / 0.05);
   --shadow-xs: 0px 2px 5px 0px oklch(0.83 0.09 247.96 / 0.05);
-  --shadow-sm: 0px 2px 5px 0px oklch(0.83 0.09 247.96 / 0.10), 0px 1px 2px -1px oklch(0.83 0.09 247.96 / 0.10);
-  --shadow: 0px 2px 5px 0px oklch(0.83 0.09 247.96 / 0.10), 0px 1px 2px -1px oklch(0.83 0.09 247.96 / 0.10);
-  --shadow-md: 0px 2px 5px 0px oklch(0.83 0.09 247.96 / 0.10), 0px 2px 4px -1px oklch(0.83 0.09 247.96 / 0.10);
-  --shadow-lg: 0px 2px 5px 0px oklch(0.83 0.09 247.96 / 0.10), 0px 4px 6px -1px oklch(0.83 0.09 247.96 / 0.10);
-  --shadow-xl: 0px 2px 5px 0px oklch(0.83 0.09 247.96 / 0.10), 0px 8px 10px -1px oklch(0.83 0.09 247.96 / 0.10);
+  --shadow-sm:
+    0px 2px 5px 0px oklch(0.83 0.09 247.96 / 0.1), 0px 1px 2px -1px oklch(0.83 0.09 247.96 / 0.1);
+  --shadow:
+    0px 2px 5px 0px oklch(0.83 0.09 247.96 / 0.1), 0px 1px 2px -1px oklch(0.83 0.09 247.96 / 0.1);
+  --shadow-md:
+    0px 2px 5px 0px oklch(0.83 0.09 247.96 / 0.1), 0px 2px 4px -1px oklch(0.83 0.09 247.96 / 0.1);
+  --shadow-lg:
+    0px 2px 5px 0px oklch(0.83 0.09 247.96 / 0.1), 0px 4px 6px -1px oklch(0.83 0.09 247.96 / 0.1);
+  --shadow-xl:
+    0px 2px 5px 0px oklch(0.83 0.09 247.96 / 0.1), 0px 8px 10px -1px oklch(0.83 0.09 247.96 / 0.1);
   --shadow-2xl: 0px 2px 5px 0px oklch(0.83 0.09 247.96 / 0.25);
-  
 }
 
 .dark {
@@ -112,7 +116,7 @@
   --card-foreground: oklch(0.97 0.01 267.41);
   --popover: oklch(0.29 0 0);
   --popover-foreground: oklch(0.97 0.01 267.41);
-  --primary: oklch(0.80 0.14 348.82);
+  --primary: oklch(0.8 0.14 348.82);
   --primary-foreground: oklch(0.22 0 0);
   --secondary: oklch(0.77 0.15 306.21);
   --secondary-foreground: oklch(0.22 0 0);
@@ -120,31 +124,36 @@
   --muted-foreground: oklch(0.85 0 0);
   --accent: oklch(0.83 0.09 247.96);
   --accent-foreground: oklch(0.22 0 0);
-  --destructive: oklch(0.70 0.19 23.04);
+  --destructive: oklch(0.7 0.19 23.04);
   --border: oklch(0.39 0 0);
   --input: oklch(0.39 0 0);
   --ring: oklch(0.83 0.09 247.96);
-  --chart-1: oklch(0.80 0.14 348.82);
+  --chart-1: oklch(0.8 0.14 348.82);
   --chart-2: oklch(0.77 0.15 306.21);
   --chart-3: oklch(0.83 0.09 247.96);
   --chart-4: oklch(0.88 0.09 66.79);
   --chart-5: oklch(0.94 0.14 130.35);
   --sidebar: oklch(0.29 0 0);
   --sidebar-foreground: oklch(0.97 0.01 267.41);
-  --sidebar-primary: oklch(0.80 0.14 348.82);
+  --sidebar-primary: oklch(0.8 0.14 348.82);
   --sidebar-primary-foreground: oklch(0.22 0 0);
   --sidebar-accent: oklch(0.83 0.09 247.96);
   --sidebar-accent-foreground: oklch(0.22 0 0);
   --sidebar-border: oklch(0.39 0 0);
   --sidebar-ring: oklch(0.83 0.09 247.96);
-  
+
   --shadow-2xs: 0px 1px 2px 0px oklch(0.83 0.09 247.96 / 0.05);
   --shadow-xs: 0px 1px 2px 0px oklch(0.83 0.09 247.96 / 0.05);
-  --shadow-sm: 0px 1px 2px 0px oklch(0.83 0.09 247.96 / 0.10), 0px 1px 2px -1px oklch(0.83 0.09 247.96 / 0.10);
-  --shadow: 0px 1px 2px 0px oklch(0.83 0.09 247.96 / 0.10), 0px 1px 2px -1px oklch(0.83 0.09 247.96 / 0.10);
-  --shadow-md: 0px 1px 2px 0px oklch(0.83 0.09 247.96 / 0.10), 0px 2px 4px -1px oklch(0.83 0.09 247.96 / 0.10);
-  --shadow-lg: 0px 1px 2px 0px oklch(0.83 0.09 247.96 / 0.10), 0px 4px 6px -1px oklch(0.83 0.09 247.96 / 0.10);
-  --shadow-xl: 0px 1px 2px 0px oklch(0.83 0.09 247.96 / 0.10), 0px 8px 10px -1px oklch(0.83 0.09 247.96 / 0.10);
+  --shadow-sm:
+    0px 1px 2px 0px oklch(0.83 0.09 247.96 / 0.1), 0px 1px 2px -1px oklch(0.83 0.09 247.96 / 0.1);
+  --shadow:
+    0px 1px 2px 0px oklch(0.83 0.09 247.96 / 0.1), 0px 1px 2px -1px oklch(0.83 0.09 247.96 / 0.1);
+  --shadow-md:
+    0px 1px 2px 0px oklch(0.83 0.09 247.96 / 0.1), 0px 2px 4px -1px oklch(0.83 0.09 247.96 / 0.1);
+  --shadow-lg:
+    0px 1px 2px 0px oklch(0.83 0.09 247.96 / 0.1), 0px 4px 6px -1px oklch(0.83 0.09 247.96 / 0.1);
+  --shadow-xl:
+    0px 1px 2px 0px oklch(0.83 0.09 247.96 / 0.1), 0px 8px 10px -1px oklch(0.83 0.09 247.96 / 0.1);
   --shadow-2xl: 0px 1px 2px 0px oklch(0.83 0.09 247.96 / 0.25);
 }
 
